[project]
name = "comfyui-tzootz_vhs"
description = "The TZOOTZ VHS Effect Node is designed for multimedia creators who want to blend digital precision with analog imperfection ↔️. Inspired by retro VHS aesthetics, this node lets you apply grain, color bleeding, saturation adjustments, and more, giving any image a touch of analog warmth and noise."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/TZOOTZ/ComfyUI-TZOOTZ_VHS"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-TZOOTZ_VHS"
Icon = ""
